<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance"
        android:inputType="number"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewTotalKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/TotalKm"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewPriceLitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pricePerLiter"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Autonomy"
        android:inputType="numberDecimal"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewKmPerLiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/KmsPerLiter"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewTotalSpend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:text="@string/TotalSpend"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewCurrencyBrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/TotalValue"
        android:textSize="26sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"
        android:padding="12dp"
        android:text="@string/Calculate"
        android:textSize="26sp" />


</LinearLayout>